--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -233,8 +233,8 @@ a{
 @media (max-width: 1024px) {
   /* Reduce category card size in scroll list */
   .category-card {
-    min-width: 150px;
-    width: 150px;
+  min-width: 45%; /* About two cards per row */
+  width: 45%;
   }
   
   .category-image-container {
