--- a/src/styles/Category.css
+++ b/src/styles/Category.css
@@ -56,22 +56,35 @@
 .pagination {
   display: flex;
   justify-content: center;
+  align-items: center;
+  gap: 6px;
   margin: 40px 0 20px;
+  flex-wrap: wrap;
 }
 
+
 .pagination button {
-  margin: 0 5px;
   padding: 6px 12px;
-  border: 1px solid #eee;
+  border: 1px solid #ddd;
   background: white;
+  border-radius: 8px;
   cursor: pointer;
-  border-radius: 10px;
-  font-weight: 500;
+  font-size: 14px;
+  transition: 0.2s;
+}
+.pagination button:hover {
+  background: #f2f2f2;
 }
 
 .pagination .active {
-  background: #F4F2F2;
-  font-weight: 600;
+  background: #C30A1D;
+  color: white;
+  border-color: #C30A1D;
+}
+.pagination .dots {
+  padding: 6px 10px;
+  color: #999;
+  font-weight: bold;
 }
 
 .searchbar-space {
