--- a/src/styles/Categories.css
+++ b/src/styles/Categories.css
@@ -258,13 +258,14 @@ a{
 
   .category-link1 {
     flex: 0 0 calc(50% - 10px); /* 2 per line */
-    margin-bottom: 15px;
+    /* margin-bottom: 5px; */
   }
 
-  /* Make images circular */
+/* make the image smaller */
   .category-image,
   .category-image1 {
-    border-radius: 50%;
+    width: 100%;
+    height: 70%;
   }
 }
 
